--- a/普及组课程/关于一些报错.md
+++ b/普及组课程/关于一些报错.md
@@ -1,27 +1,21 @@
 1. 输入了**中文字符**
-   ![image-20230210102625638](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210102625638.png)
+   ![image-20230215210105539](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210105539.png)
 2. 缺少**分号**
-   ![image-20230210102651773](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210102651773.png)
+   ![image-20230215210151752](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210151752.png)
 3. 变量/函数没有声明或者定义
-   ![image-20230210102755736](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210102755736.png)
+   ![image-20230215210235117](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210235117.png)
 4. 数组开的太大
-   ![image-20230210102856803](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210102856803.png)
+   ![image-20230215210341067](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210341067.png)
 5. 变量/函数标识符重复
-   ![image-20230210102936727](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210102936727.png)
+   ![image-20230215210547331](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210547331.png)
 6. 把关键词当作了标识符
-   ![image-20230210103011217](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103011217.png)
-   ![image-20230210103018115](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103018115.png)
+   ![image-20230215210645209](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210645209.png)
 7. 程序结束不了(死循环)
 8. 数字除0 
-   ![image-20230210103056946](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103056946.png)
+   ![image-20230215210733538](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210733538.png)
 9. 全局数组使用变量定义大小
-   ![image-20230210103203139](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103203139.png)
-   ![image-20230210103211073](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103211073.png)
+   ![image-20230215210817602](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210817602.png)
 10. 不存在的关键词
-    ![image-20230210103257994](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103257994.png)
-    ![image-20230210103307866](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103307866.png)
+    ![image-20230215210848357](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210848357.png)
 11. 缺少} ] )
-    ![image-20230210103415688](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103415688.png)
-    ![image-20230210103426584](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103426584.png)
-    ![image-20230210103444272](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20230210103444272.png)
-    
+    ![image-20230215210914680](C:\Users\Admin\AppData\Roaming\Typora\typora-user-images\image-20230215210914680.png)
